Cargo ejerciocio de Star Wars Blog

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,15 @@
 /* 
     General Styles
 */
+body {
+    background-image: url("https://i.pinimg.com/originals/9d/43/9f/9d439f6476ea633d9ad1d03fb156e291.gif");
+    
+};
+.navbar {
+    background-color: black;
+};
+
+
+.footer {
+    background-color: black;
+}
